--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required (VERSION 2.8.11)
 project (Sample)
 
-aux_source_directory(. SRC)
+#aux_source_directory(. SRC)
 
-add_executable(${PROJECT_NAME} ${SRC})
+#add_executable(${PROJECT_NAME} ${SRC})
+
+add_subdirectory(lib)
+add_subdirectory(prog)
 
